--- a/Icebreaker/startFundraiser/templates/startFundraiser/home.html
+++ b/Icebreaker/startFundraiser/templates/startFundraiser/home.html
@@ -115,6 +115,7 @@
          </div>
       </section>
       <!-- Top Fundraiser -->
+      {% if most_liked %}
       <section class="funds-sec">
          <div class="container-box-lg">
             <div class="featured-donate overlay-color"></div>
@@ -140,6 +141,7 @@
             </div>
          </div>
       </section>
+      {% endif %}
       {% endblock %}
       <!-- End Top Fundraisers-->
 
